adicionando novos canais de venda, ajustando posição dos elementos

--- a/index.html
+++ b/index.html
@@ -21,18 +21,14 @@ title: "Contos dos Vieses"
       <div id="hero-description" class="panel">
         <div class="container">
           <div class="text description-content">
-            <p>Uma coletânea de fábulas encantadoras que ensinam sobre vieses cognitivos de forma leve e inspiradora</p>
+            <p>Uma coletânea de fábulas encantadoras que ensinam sobre vieses cognitivos de forma leve e inspiradora.</p>
           </div>
         </div>
       </div>
 
       <div id="hero-cta" class="panel">
         <div class="container">
-          <a class="button" href="https://www.amazon.com.br/Contos-dos-Vieses-F%C3%A1bulas-Liderados/dp/6528007047"
-            target="_blank">
-            Adquira o livro agora!
-          </a>
-          <small>(Link para a Amazon, confira outras lojas <a href="#OndeComprar">aqui</a>)</small>
+          <a class="button" href="#OndeComprar" target="_self">Adquira o livro agora!</a>
         </div>
       </div>
     </div>
@@ -94,19 +90,30 @@ title: "Contos dos Vieses"
     <p>O livro <strong>Contos dos Vieses</strong> está disponível nos principais canais de venda, em versões Impressas e
       Digitais.</p>
     <div class="canais-de-venda">
-      <a class="canal"
+      <a class="canal amazon"
         href="https://www.amazon.com.br/Contos-dos-Vieses-F%C3%A1bulas-Liderados/dp/6528007047/ref=tmm_pap_swatch_0?_encoding=UTF8&dib_tag=se&dib=eyJ2IjoiMSJ9.Un0Hq9FRTHoD1TS1o6lwh2CmzRmp1Zbat8LZGV6L_-jUzWts068ruon_FZd9L7NtDM6oSQZqca4qstnfyX72U_Wm3jkmLOxNkWftdCLcM-9LmhGUWOES6ivVOA5zAqhYOCmXfsW37LVqqnEoq2CbV2Y5XHW3aS0Nn5irxDTzrzL9MjDdsLArliFWy8F82r2klovvhOIIJQFpDnB7_Y9PGw.eJXrFsq99oHywWLPB1qVe5djyFp17L_0L6S0uq3tF2k&qid=1738024934&sr=8-1"
         target="_blank"><img
           src="https://static-cdn.myedools.com/org-748561/school-742122/f3014f86-7094-4252-b4cb-2ef8d0336ac9/assets/c0d9f45d-c3e8-4f44-ab46-4227a92add00.png" /></a>
-      <a class="canal"
+      <a class="canal estante-virtual"
         href="https://www.estantevirtual.com.br/livro/contos-dos-vieses-fabulas-para-lideres-e-liderados-GR4-3176-000"
         target="_blank"><img
           src="https://static-cdn.myedools.com/org-748561/school-742122/f3014f86-7094-4252-b4cb-2ef8d0336ac9/assets/0c6efe1a-35ce-48ac-84f0-423a2ba18cfb.png" /></a>
-
-      <a class="canal"
+      <a class="canal americanas"
         href="https://www.americanas.com.br/produto/7515072353/contos-dos-vieses-fabulas-para-lideres-e-liderados?pfm_carac=contos-dos-vieses&pfm_index=1&pfm_page=search&pfm_pos=grid&pfm_type=search_page&offerId=67a2a84cf85575c569bdfe7b"
         target="_blank"><img
           src="https://static-cdn.myedools.com/org-748561/school-742122/f3014f86-7094-4252-b4cb-2ef8d0336ac9/assets/687c08a8-0193-49c4-9ac9-0f87f59a3304.png" /></a>
+      <a class="canal skeelo"
+        href="https://loja.skeelo.com/ebooks/administracao-economia-e-negocios/gestao-e-lideranca/contos-dos-vieses"
+        target="_blank"><img src="{{ 'assets/images/skeelo.png' | relative_url }}" /></a>
+      <a class="canal carrefour"
+        href="https://www.carrefour.com.br/contos-dos-vieses-fabulas-para-lideres-e-liderados-mp950407610/p"
+        target="_blank"><img src="{{ '/assets/images/carrefour.png' | relative_url }}" /></a>
+      <a class="canal casas-bahia"
+        href="https://www.casasbahia.com.br/contos-dos-vieses-fabulas-para-lideres-e-liderados/p/1571064862"
+        target="_blank"><img src="{{ '/assets/images/casasbahia.png' | relative_url }}" /></a>
+      <a class="canal fnac" href="https://www.fnac.pt/livre-numerique/a12534947/Contos-dos-Vieses" target="_blank"><img
+          src="{{ '/assets/images/fnac.png' | relative_url }}" /></a>
+      <!-- <a class="canal apple-books" href="" target="_blank"><img src="{{ '/assets/images/applebooks.png' | relative_url }}" /></a> -->
     </div>
   </div>
 </div>
